Edit Scss files

--- a/src/stylesheets/Button_green.scss
+++ b/src/stylesheets/Button_green.scss
@@ -1,6 +1,5 @@
 .BG{
-    background-color: #7af52d;
-    border: outset 5px;
+    background-color: var(--green-color);
     border-top-color: #a1f76c;
     border-right-color: #a1f76c;
     border-left-color: #75c047;
