--- a/src/stylesheets/Button_red.scss
+++ b/src/stylesheets/Button_red.scss
@@ -1,6 +1,5 @@
 .BR{
-    background-color: #f52d47;
-    border: outset 5px;
+    background-color:var(--red-color);
     border-top-color: #f88b9a;
     border-right-color: #f88b9a;
     border-left-color: #bc4656;
