--- a/src/stylesheets/Button_white.scss
+++ b/src/stylesheets/Button_white.scss
@@ -1,6 +1,5 @@
 .BW{
-    background-color: #e0e0dd;
-    border: outset 5px;
+    background-color: var(--white-color);
     border-top-color: #f3f3f1;
     border-right-color: #f3f3f1;
     border-left-color: #c1c1c1;
