--- a/src/stylesheets/Button_yellow.scss
+++ b/src/stylesheets/Button_yellow.scss
@@ -1,6 +1,5 @@
 .BY{
-    background-color: rgb(218, 228, 65);
-    border: outset 5px;
+    background-color:var(--yellow-color);
     border-top-color: #e9fc7d;
     border-right-color: #e9fc7d;
     border-left-color: #a7b556;
