--- a/src/stylesheets/Container.scss
+++ b/src/stylesheets/Container.scss
@@ -6,7 +6,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 5rem;
+    gap: 2rem;
 
 
 }
@@ -21,6 +21,7 @@ h1{
     font-family:  Student ; 
     font-size: 3rem;
     margin-top: 2rem;
+    margin-bottom: 0px;
 }
 .Container {
     background-color: rgb(30, 28, 42);
