--- a/src/stylesheets/Button_blue.scss
+++ b/src/stylesheets/Button_blue.scss
@@ -1,7 +1,6 @@
 #Bspace{
     width: 98%;
-    background-color: aqua;
-    border: outset 5px;
+    background-color:var(--blue-color);
     border-top-color: #67eaf4;
     border-right-color: #67eaf4;
     border-left-color: #529d9d;
