Write func to type with keyboard and mouse

--- a/src/stylesheets/Button_defult.scss
+++ b/src/stylesheets/Button_defult.scss
@@ -7,3 +7,14 @@ button{
 
 
 }
+
+.buttons.active{
+    
+    border:none;
+    --blue-color :#6ac1c1;
+    --yellow-color: #edf671;
+    --red-color : #f66074;
+    --green-color: #a9fc75;
+    --white-color : #b2b2b2;
+}
+
