--- a/src/stylesheets/Button_red.scss
+++ b/src/stylesheets/Button_red.scss
@@ -7,6 +7,16 @@
     width: 4rem;
     font-size: large;
 }
+@media screen and (max-width: 768px) {
+    #Caps{
+        font-size: medium;
+
+    }
+    #CpasLight{
+        width: 2px;
+        height: 2px;
+    }
+  }
 #Caps{
     display: flex;
     flex-direction: row;
